--- a/virvo/virvo/rayrend/CMakeLists.txt
+++ b/virvo/virvo/rayrend/CMakeLists.txt
@@ -45,6 +45,7 @@ endif()
 add_subdirectory(avx)
 add_subdirectory(avx2)
 add_subdirectory(cuda)
+add_subdirectory(scatter)
 add_subdirectory(fpu)
 add_subdirectory(sse2)
 add_subdirectory(sse4_1)
