--- a/virvo/virvo/rayrend/scatter/CMakeLists.txt
+++ b/virvo/virvo/rayrend/scatter/CMakeLists.txt
@@ -4,6 +4,8 @@ find_package(CUDA)
 
 deskvox_use_package(CUDA INCDIRS ${CUDA_TOOLKIT_INCLUDE})
 
+endif(DESKVOX_USE_CUDA)
+
 deskvox_link_libraries(virvo)
 deskvox_link_libraries(virvo_fileio)
 
@@ -12,11 +14,17 @@ set(RAYREND_HEADERS
 )
 
 add_definitions(-DHAVE_CONFIG_H)
-add_definitions(-DVV_ARCH_CUDA=1)
 
+if(DESKVOX_USE_CUDA)
+add_definitions(-DVV_ARCH_CUDA=1)
 deskvox_cuda_compiles(RAYREND_SCATTER_SOURCES
     ../../vvscattercaster.cu
 )
+else()
+set(RAYREND_SCATTER_SOURCES
+    ../../vvscattercaster.cpp
+)
+endif()
 
 deskvox_add_library(rayrendscatter
     ${RAYREND_HEADERS}
@@ -30,5 +38,3 @@ set_target_properties(rayrendscatter PROPERTIES LINKER_LANGUAGE CXX)
 if (MSVC_VERSION GREATER 1800 AND DESKVOX_USE_CUDA AND CUDA_FOUND)
     target_link_libraries(rayrendscatter legacy_stdio_definitions.lib)
 endif()
-
-endif(DESKVOX_USE_CUDA)
