--- a/.envrc
+++ b/.envrc
@@ -2,7 +2,7 @@
 
 BUILD_TYPE=RelWithDebInfo
 CWD=`pwd -P`
-BINARY_DIR=$CWD/build/$BUILD_TYPE/bin
+BINARY_DIR=$CWD/build-titanv/$BUILD_TYPE/bin
 
 export VV_SHADER_PATH=$CWD/virvo/shader
 export VV_PLUGIN_PATH=$BINARY_DIR
