flash converter working (kind of)

--- a/virvo/virvo/CMakeLists.txt
+++ b/virvo/virvo/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(cfitsio)
 find_package(Cg)
 find_package(FFMPEG)
 find_package(GLEW REQUIRED)
+find_package(HDF5 COMPONENTS CXX)
 find_package(JPEGTURBO)
 find_package(Nifti)
 find_package(NORM)
@@ -37,6 +38,8 @@ if(DESKVOX_USE_CUDA)
 endif(DESKVOX_USE_CUDA)
 deskvox_use_package(FFMPEG)
 deskvox_use_package(GLEW)
+include_directories(${HDF5_CXX_INCLUDE_DIRS})
+deskvox_use_package(HDF5)
 deskvox_use_package(JPEGTURBO)
 deskvox_use_package(Nifti)
 deskvox_use_package(NORM)
